# maps-of-might-and-delusion

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .tool-versions  Dockerfile  Makefile  README.md  _typos.toml  main.py  package-lock.json  pyproject.toml  requirements.txt  ruff.toml
.github/workflows/: release.yaml
examples/configs/: 48L_brawl.yaml  arena.yaml  basic.yaml  basic2.yaml  basic3.yaml  custom_prompt.yaml  custom_save_directory.yaml  game_of_thrones.yaml  go_nuts.yaml  harsh_winter.yaml  huge_hobbit.yaml  large.yaml  m88.yaml  maze.yaml  obstacle_maze.yaml  obstacle_maze_openai.yaml  quest.yaml  restrict_custom_objects.yaml  template_name_override.yaml
src/: ai.py  app.py  config.py  disk_cache.py  file.py  gui.py  logger.py  main.py  map.py  mapgenerator.py  models.py  paths.py  templates.py  vcmi.py
src/h3m/: lib.py  objects.py
src/templates/: initial_prompt.j2
vcmi/: Dockerfile  entrypoint.sh
