[project]
name = "ai-of-might-and-delusion"
version = "0.1.0"
description = "HOMM3 (vcmi) map generator using LLMs"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.8",
    "docker>=7.1.0",
    "easyprocess>=1.1",
    "gitpython>=3.1.45",
    "hydra-core>=1.3.2",
    "jinja2>=3.1.6",
    "mcp>=1.14.1",
    "numpy>=2.2.6",
    "opencv-python>=4.12.0.88",
    "opensimplex>=0.4.5.1",
    "pillow>=11.3.0",
    "pyautogui>=0.9.54",
    "pydantic-ai-slim[anthropic,mcp,openai]>=0.8.1",
    "python-dotenv>=1.1.1",
    "pyvirtualdisplay>=3.0",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
