[project]
name = "ai-of-might-and-delusion"
version = "0.1.0"
description = "HOMM3 (vcmi) map generator using LLMs"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.8",
    "jinja2>=3.1.6",
    "pydantic-ai-slim[anthropic,openai]>=0.8.1",
    "pyyaml>=6.0.2",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
